# atlas-examples

./: .gitignore  README.md  cabal.project
bet-ref/: betref.cabal  config.json
bet-ref/onchain/: BetRef.hs
bet-ref/onchain/BetRef/: Compiled.hs
bet-ref/server/: server-main.hs
bet-ref/server-lib/BetRef/Api/: Api.hs  BetRef.hs  Operations.hs
